# AWP-UI

./: README.md  UPDATE.md  package-lock.json  package.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  synapsezapi.rs
src/assets/module/: lua-nf6ki56Z.js
src/assets/module/assets/: index-u2vJTCPg.css  javascript-CGQ8ZXfO.js  typescript-D7u3xL2c.js
src/assets/module/client/executor/scripting/: scripting.html
