[package]
name = "awp"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "awp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
open = "5"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
env = "1.0.1"
fs = "0.0.5"
lazy_static = "1.4"
rand = "0.10.0"
chrono = "0.4"
windows = { version = "0.62.2", features = ["Win32_System_Pipes"] }
tauri-plugin-dialog = "2"
sysinfo = "0.38.4"
reqwest = { version = "0.13.2", features = ["blocking"] }
mslnk = "0.1.8"

